--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                   <h3 id="temperatura"></h3>
                   <h3 id="data"></h3>
                   <h2 id="descricao"></h2>
+              <!-- </div> -->
+              <!-- <div class="container grid"> -->
+                <div class="info"> <!-- Acopla itens do meio -->
+                  <tr>
+                      <td><h4 id="humidity"></h4></td>
+                      <td><h4 id="wind_speedy"></h4></td>
+                  </tr>
+                  <tr>
+                      <td><h4 id="sunrise"></h4></td>
+                      <td><h4 id="sunset"></h4></td>
+                  </tr>
               </div>
             </div>
             <!--  -->
@@ -65,25 +76,6 @@
           </div>
         </div>
       </section>
-
-      <div class="divider-1"></div>
-  <!-- SERVICES -->
-      <section class="section" id="services">
-        <div class="container grid">
-          <div class="info"> <!-- Acopla itens do meio -->
-            <tr>
-                <td><h4 id="humidity"></h4></td>
-                <td><h4 id="wind_speedy"></h4></td>
-            </tr>
-            <tr>
-                <td><h4 id="sunrise"></h4></td>
-                <td><h4 id="sunset"></h4></td>
-            </tr>
-        </div>
-          </div>
-        </div>
-      </section>
-      
 
       <div class="divider-2"></div>
 <!-- ABOUT -->
