--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a class="title" href="#TODAY">Previsão para hoje</a></li>
             <!-- <li><a class="title" href="#services">Infromações do dia</a></li> -->
             <li><a class="title" href="#THEWEEK">Previsão para a semana</a></li>
-            <li><a class="title" href="#about">Serviços</a></li>
+            <li><a class="title" href="#about">Tempo de chuvas</a></li>
             <li><a class="title" href="#problems">Problemas enfrentados</a></li>
           </ul>
         </div>
@@ -101,11 +101,11 @@
               <div class="image">
                 <img
                   src="https://images.unsplash.com/photo-1531146974032-86ab35dce3a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE1fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
-                  alt="3 mulheres sorrindo"
+                  alt="Uma rua molhada apos a chuva"
                 />
               </div>
               <div class="text">
-                <h2 class="title">Sobre nós</h2>
+                <h2 class="title">Tempo de chuvas</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
