add assets end project

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-      <!-- HOME -->
+      <!-- TODAY -->
       <section class="section" id="TODAY">
         <div class="container">
           <div class="text">
@@ -107,24 +107,11 @@
               <div class="text">
                 <h2 class="title">Tempo de chuvas</h2>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
-                  beatae dicta ducimus praesentium architecto harum dolorum
-                  distinctio illo earum assumenda itaque. Omnis, quam repellat.
+                  As enchentes atingem grande parte da população brasileira nos períodos de maior chuva, porém precisamos separar as coisas pois temos diferenças na maneira que as situações acontecem, as enchentes ocorrem quando o volume dos rios, lagos e lagoas extravasa a margem, e quando a inundação acontece e porque o rio alcança a planície causando problemas a população que vive próximo aos rios, lagos e lagoas. 
                 </p>
                 <br />
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-                  illum ratione impedit quae eum quis adipisci asperiores, est
-                  doloribus distinctio excepturi minima eius dolore! Perferendis
-                  laborum illo aspernatur repellendus ipsum.
-                </p>
-                <br />
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-                  exercitationem, illum sapiente quasi hic iusto odio maiores esse
-                  quaerat quis necessitatibus at odit, dolores dicta, officia ab
-                  quos. Provident, quae.
+                  Grande parte dos alagamentos nas metrópoles é causada pelo acúmulo de lixo descartado nas ruas e margens de rios poluídos e nos tempos de chuvas a água fica impossibilitada de ter um escoamento fluido entre os diversos canais e tubulações da cidade. Assim acontece de os alagamentos invadir ruas, casas e comércios causando problemas a população.
                 </p>
               </div>
             </div>
@@ -146,27 +133,21 @@
               <i class="icon-"></i>
               <h3 class="title">Enchentes</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
+                É causada pelo acúmulo de lixo descartado nas ruas e margens de rios poluídos e nos tempos de chuvas a água fica impossibilitada de ter um escoamento fluido entre os diversos canais e tubulações da cidade.
               </p>
             </div>
             <div class="card">
               <i class="icon-"></i>
               <h3 class="title">Doenças</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
+                As doenças que são trazidas pelas águas contaminadas de córregos são <span>Dengue, Febre tifoide, Hepatites A e E, Leptospirose, Cólera</span>
               </p>
             </div>
             <div class="card">
               <i class="icon-"></i>
-              <h3 class="title">Deslizamentos</h3>
+              <h3 class="title">Deslizamentos de encostas</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-                distinctio neque blanditiis, dolorem aperiam nulla explicabo
-                asperiores
+                Se você observar rachaduras ou fendas em alguma encosta, o surgimento de minas d’água, a inclinação anormal de postes ou árvores fique atento. Estes são sinais de que a qualquer momento podem ocorrer deslizamentos de terra na encosta. Avise imediatamente o corpo de bombeiros (193) ou a defesa civil (197) e  os moradores próximos da área afetada para que saiam de casa em caso de chuva.
               </p>
             </div>
           </div>
@@ -186,18 +167,7 @@
           <p>©2021 PrevisãoTempo.</p>
           <p>Todos os direitos reservados.</p>
         </div>
-<!-- 
-        <div class="social grid">
-          <a href="https://instagram.com" target="_blank">
-            <i class="icon-instagram"></i>
-          </a>
-          <a href="https://facebook.com" target="_blank">
-            <i class="icon-facebook"></i
-          ></a>
-          <a href="https://youtube.com" target="_blank"
-            ><i class="icon-youtube"></i
-          ></a>
-        </div> -->
+ 
       </div>
     </footer>
 
